@@ -114,7 +114,6 @@
                     <reuseForks>true</reuseForks>
                     <useSystemClassLoader>false</useSystemClassLoader>
                     <failIfNoTests>false</failIfNoTests>
-                    <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <systemPropertyVariables>
                         <buildDirectory>${project.build.directory}</buildDirectory>
                     </systemPropertyVariables>
@@ -140,7 +139,6 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
-                    <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <includes>
                         <include>**/*ITest.java</include>
                         <include>**/*ITests.java</include>
@@ -322,15 +320,15 @@
                         <version>1.3.2.GA</version>
                     </docletArtifact>
                     <useStandardDocletOptions>true</useStandardDocletOptions>
-                    <charset>UTF-8</charset>
-                    <encoding>UTF-8</encoding>
-                    <docencoding>UTF-8</docencoding>
+                    <charset>${project.build.sourceEncoding}</charset>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <docencoding>${project.build.sourceEncoding}</docencoding>
                     <breakiterator>true</breakiterator>
                     <version>true</version>
                     <author>true</author>
                     <keywords>true</keywords>
                     <additionalparam>
-                        -sourceclasspath ${project.build.outputDirectory}
+                        -quiet -sourceclasspath ${project.build.outputDirectory}
                     </additionalparam>
                 </configuration>
             </plugin>
@@ -363,7 +361,7 @@
                     </mapping>
                     <strictCheck>true</strictCheck>
                     <useDefaultMapping>true</useDefaultMapping>
-                    <encoding>UTF-8</encoding>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
                 <executions>
                     <execution>
